--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <section id="start">
         <img src="./assets/img/baloon.gif" alt="Незнайка" title="Незнайка" class="neznaika" />
         <div class="intro">
+            <img src="./assets/img/Exmo-Logo.png" alt="Издательство \" Эксмо\"" title="Издательство \" Эксмо\""
+                onclick="window.open('https://eksmo.ru/','_blank','');"
+                style="position:absolute; z-index:3;right:0;top:0;" />
             <div class="titlewrapper">
                 <span>c</span><span>п</span><span>р</span><span>о</span><span>с</span><span>и</span><span>&nbsp;</span>
                 <span>Н</span><span>е</span><span>з</span><span>н</span><span>а</span><span>й</span><span>к</span><span>у</span>
