--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@
         <div class="intro">
             <img src="./assets/img/Exmo-Logo.png" alt="Издательство &quot;Эксмо&quot;"
                 title="Издательство &quot;Эксмо&quot;" onclick="window.open('https://eksmo.ru/','_blank','');"
-                style="position:absolute; z-index:3;right:0;top:0;" />
-            <div class="titlewrapper">
-                <span>c</span><span>п</span><span>р</span><span>о</span><span>с</span><span>и</span><span>&nbsp;</span>
-                <span>Н</span><span>е</span><span>з</span><span>н</span><span>а</span><span>й</span><span>к</span><span>у</span>
-            </div>
+                class="eksmo-logo" />
+            <div class="titlewrapper"></div>
             <div class="btnwrapper">
                 <button id="go">Начать</button>
             </div>
