--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спроси Незнайку!</title>
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>&#127880;</text></svg>">
+
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <script src="./assets/scripts/ks.js"></script>
     <script src="./assets/scripts/index.js"></script>
@@ -46,6 +49,9 @@
     <section id="idles"></section>
 
     <section id="listening">
+        <audio style="display:none;">
+            <source type="audio/mpeg">
+        </audio>
         <img src="./assets/img/listening.gif" alt="Незнайка" title="Незнайка" class="neznaika" />
         <div class="book">
             <textarea id="question" cols="30" rows="10"></textarea>
