--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
 
     <section id="loader">
-        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+        <!--<script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
             type="module"></script>
         <dotlottie-player src="https://lottie.host/400dfb4e-fb74-44ec-b0f4-1835a445ad12/Oy1Fe4xE7G.json"
             background="transparent" speed="1" style="width: 100%; height: 100%" direction="1" mode="normal" loop
             autoplay></dotlottie-player>
-        <noscript><img src="./assets/img/baloon.gif" alt="Незнайка" title="Незнайка" class="neznaika" /></noscript>
+        <!-- <noscript>--><img src="./assets/img/baloon.gif" alt="Незнайка" title="Незнайка" class="neznaika" /><!--</noscript> -->
     </section>
 
     <section id="start">
