--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <script src="./assets/scripts/ks.js"></script>
-    <script src="./assets/scripts/index.js"></script>
+    <script src="./assets/scripts/index.js" defer></script>
+    <link rel="preload" href="./assets/img/welcome.gif" as="image">
+    <link rel="preload" href="./assets/img/idle.gif" as="image">
+    <link rel="preload" href="./assets/img/cake_magician.gif" as="image">
+    <link rel="preload" href="./assets/img/listening.gif" as="image">
+    <link rel="preload" href="./assets/img/answering.gif" as="image">
+    <link rel="preload" href="./assets/img/idk.gif" as="image">
+    <link rel="preload" href="./assets/img/wondering.gif" as="image">
+    <link rel="preload" href="./assets/img/goodbye.gif" as="image">
 </head>
 
 <body data-state="loader">
