--- a/index.html
+++ b/index.html
@@ -10,34 +10,28 @@
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <script src="./assets/scripts/ks.js"></script>
     <script src="./assets/scripts/index.js" defer></script>
-    <link rel="preload" href="./assets/img/welcome.gif" as="image">
-    <link rel="preload" href="./assets/img/idle.gif" as="image">
-    <link rel="preload" href="./assets/img/cake_magician.gif" as="image">
-    <link rel="preload" href="./assets/img/listening.gif" as="image">
-    <link rel="preload" href="./assets/img/answering.gif" as="image">
-    <link rel="preload" href="./assets/img/idk.gif" as="image">
-    <link rel="preload" href="./assets/img/wondering.gif" as="image">
-    <link rel="preload" href="./assets/img/goodbye.gif" as="image">
 </head>
 
 <body data-state="loader">
 
     <section id="loader">
         <div class="intro">
-            <img src="./assets/img/azbuka.png" alt="Издательская Группа &quot;Азбука-Аттикус&quot;"
+            <img src="./assets/img/logo-machaon.svg" alt="Издательская Группа &quot;Азбука-Аттикус&quot;"
                 title="Издательская Группа &quot;Азбука-Аттикус&quot;"
                 onclick="window.open('https://azbooka.ru/','_blank','');" class="logo" />
-            <img src="./assets/img/Exmo-Logo.png" alt="Издательство &quot;Эксмо&quot;"
-                title="Издательство &quot;Эксмо&quot;" onclick="window.open('https://eksmo.ru/','_blank','');"
-                class="logo" />
             <div class="titlewrapper"><img src="./assets/img/ask.svg" alt="Спроси Незнайку"></div>
         </div>
+        <button id="go">Начать</button>
     </section>
     <section id="city">
         <div class="neznaika"></div>
         <div>
             <div class="book"></div>
         </div>
+        <div class="logowrapper"><img src="./assets/img/logo-machaon.svg"
+                alt="Издательская Группа &quot;Азбука-Аттикус&quot;"
+                title="Издательская Группа &quot;Азбука-Аттикус&quot;"
+                onclick="window.open('https://azbooka.ru/','_blank','');" class="logo" /></div>
     </section>
 </body>
 
