fixed machaon logo

--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 
     <section id="loader">
         <div class="intro">
-            <img src="./assets/img/logo-machaon.svg" alt="Издательская Группа &quot;Азбука-Аттикус&quot;"
-                title="Издательская Группа &quot;Азбука-Аттикус&quot;"
-                onclick="window.open('https://azbooka.ru/','_blank','');" class="logo" />
             <div class="titlewrapper"><img src="./assets/img/ask.svg" alt="Спроси Незнайку"></div>
+        </div>
+        <div class="logowrapper">
+            <img src="./assets/img/logo-machaon.svg"
+            alt="Издательская Группа &quot;Азбука-Аттикус&quot;"
+            title="Издательская Группа &quot;Азбука-Аттикус&quot;"
+            onclick="window.open('https://azbooka.ru/','_blank','');" class="logo" />
         </div>
         <button id="go">Начать</button>
     </section>
