--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             alt="Издательская Группа &quot;Азбука-Аттикус&quot;"
             title="Издательская Группа &quot;Азбука-Аттикус&quot;"
             onclick="window.open('https://azbooka.ru/','_blank','');" class="logo" />
+            <img src="./assets/img/image 2752.svg" class="illbeback">
         </div>
         <button id="go">Начать</button>
     </section>
