--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Спроси Незнайку!</title>
     <link rel="icon" href="./assets/img/favicon.png">
 
-    <link rel="stylesheet" href="./assets/styles/styles.css">
-    <script src="./assets/scripts/ks.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    
+<link rel="stylesheet" href="./assets/styles/styles.css">
+<script src="./assets/scripts/ks.js"></script>
     <script src="./assets/scripts/index.js" defer></script>
 </head>
 
