--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="icon" href="./assets/img/favicon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    
-<link rel="stylesheet" href="./assets/styles/styles.css">
-<script src="./assets/scripts/ks.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./assets/styles/styles.css">
+    <script src="./assets/scripts/ks.js"></script>
     <script src="./assets/scripts/index.js" defer></script>
 </head>
 
@@ -23,10 +23,11 @@
             <div class="titlewrapper"><img src="./assets/img/ask.svg" alt="Спроси Незнайку"></div>
         </div>
         <div class="logowrapper">
-            <img src="./assets/img/logo-machaon.svg"
-            alt="Издательская Группа &quot;Азбука-Аттикус&quot;"
-            title="Издательская Группа &quot;Азбука-Аттикус&quot;"
-            onclick="window.open('https://azbooka.ru/','_blank','');" class="logo" />
+            <div class="logo"><img src="./assets/img/AST_EKSMO-logo.svg" alt="Издательская Группа &quot;Эксмо-АСТ&quot;"
+                    title="Издательская Группа &quot;Эксмо-АСТ&quot;" />
+                <img src="./assets/img/SKILLFACTORY-logo.svg" alt="Онлайн-школа &quot;SKILLFACTORY&quot;"
+                    title="Онлайн-школа &quot;SKILLFACTORY&quot;" />
+            </div>
             <img src="./assets/img/illbeback.svg" class="illbeback">
         </div>
         <button id="go">Начать</button>
@@ -36,10 +37,13 @@
         <div>
             <div class="book"></div>
         </div>
-        <div class="logowrapper"><img src="./assets/img/logo-machaon.svg"
-                alt="Издательская Группа &quot;Азбука-Аттикус&quot;"
-                title="Издательская Группа &quot;Азбука-Аттикус&quot;"
-                onclick="window.open('https://azbooka.ru/','_blank','');" class="logo" /></div>
+        <div class="logowrapper">
+            <div class="logo"><img src="./assets/img/AST_EKSMO-logo.svg" alt="Издательская Группа &quot;Эксмо-АСТ&quot;"
+                    title="Издательская Группа &quot;Эксмо-АСТ&quot;" />
+                <img src="./assets/img/SKILLFACTORY-logo.svg" alt="Онлайн-школа &quot;SKILLFACTORY&quot;"
+                    title="Онлайн-школа &quot;SKILLFACTORY&quot;" />
+            </div>
+        </div>
     </section>
 </body>
 
