--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <button id="go">Начать</button>
     </section>
     <section id="city">
+        <!-- <div class="daisy"></div> -->
         <div id="turbosnail"></div>
         <div class="neznaika"></div>
         <div>
