Chat now autoclears

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button id="go">Начать</button>
     </section>
     <section id="city">
-        <!-- <div class="daisy"></div> -->
+        <div id="randomCreature"></div>
         <div id="turbosnail"></div>
         <div class="neznaika"></div>
         <div>
