fixed break scene

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                     title="Онлайн-школа &quot;SKILLFACTORY&quot;" />
             </div>
             <img src="./assets/img/illbeback.svg" class="illbeback">
+            <img src="./assets/img/breakpaint.png" class="breakpaint">
+            <img src="./assets/img/breaktea.png" class="breaktea">
         </div>
         <button id="go">Начать</button>
     </section>
