No listening action after Delete

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
                 <img src="./assets/img/SKILLFACTORY-logo.svg" alt="Онлайн-школа &quot;SKILLFACTORY&quot;"
                     title="Онлайн-школа &quot;SKILLFACTORY&quot;" />
             </div>
-            <img src="./assets/img/illbeback.svg" class="illbeback">
-            <img src="./assets/img/breakpaint.png" class="breakpaint">
-            <img src="./assets/img/breaktea.png" class="breaktea">
+            <img src="./assets/img/illbeback.svg" class="illbeback" alt="Ждите, я скоро вернусь!"
+                title="Ждите, я скоро вернусь!">
+            <img src="./assets/img/breakpaint.png" class="breakpaint" alt="Картина, которую Тюбик нарисовал бы лучше"
+                title="Картина, которую Тюбик нарисовал бы лучше">
+            <img src="./assets/img/breaktea.png" class="breaktea" alt="Съешь ещё французских булок, да выпей чаю!"
+                title="Съешь ещё французских булок, да выпей чаю!">
         </div>
         <button id="go">Начать</button>
     </section>
